force-app/main/default/objects/Opportunity/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <formula>Contact__r.Contact_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Number</label>
    <type>Text</type>
</CustomField>