force-app/main/default/objects/Opportunity/fields/Contact_Source__c.field-meta.xml
<CustomField>
    <fullName>Contact_Source__c</fullName>
    <formula>TEXT(Contact__r.LeadSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Source</label>
    <type>Text</type>
</CustomField>