force-app/main/default/objects/Opportunity/fields/Cord_Blood_2_0__c.field-meta.xml
<CustomField>
    <fullName>Cord_Blood_2_0__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ZDeprecate Cord Blood 2.0</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>