force-app/main/default/objects/Opportunity/fields/Cord_Blood__c.field-meta.xml
<CustomField>
    <fullName>Cord_Blood__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ZDeprecate Cord Blood</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>