force-app/main/default/objects/Opportunity/fields/Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_Date__c</fullName>
    <description>Used by Xant to have a consistent date without UTC manipulation.</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Date</label>
    <type>Date</type>
</CustomField>