force-app/main/default/objects/Opportunity/fields/Created_Recently__c.field-meta.xml
<CustomField>
    <fullName>Created_Recently__c</fullName>
    <description>Created for Xant custom sort, which does not work with date fields.</description>
    <formula>If ( DATEVALUE(CreatedDate) &gt; Today() - 20, 20, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Recently</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>