force-app/main/default/objects/Opportunity/fields/Cyber_Monday__c.field-meta.xml
<CustomField>
    <fullName>Cyber_Monday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>temp field, used to identify who received SMS for Cyber Monday because the report only sent it to 1895 of the 8K that was suppose to get it</description>
    <label>Cyber Monday</label>
    <type>Checkbox</type>
</CustomField>