force-app/main/default/objects/Opportunity/fields/dc3DisableDuplicateCheck__c.field-meta.xml
<CustomField>
    <fullName>dc3DisableDuplicateCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Duplicate Check</label>
    <type>Checkbox</type>
</CustomField>