force-app/main/default/objects/Opportunity/fields/dc3Index__c.field-meta.xml
<CustomField>
    <fullName>dc3Index__c</fullName>
    <description>used to index duplicate check on object to eliminate use of data space</description>
    <label>Duplicate Check Index</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>