force-app/main/default/objects/Opportunity/fields/DCW__c.field-meta.xml
<CustomField>
    <fullName>DCW__c</fullName>
    <formula>if ( 
or ( 
CONTAINS(Phone__c, &quot;555-1212&quot;), 
CONTAINS(Phone__c, &quot;123-4567&quot;), 
NOT(ISBLANK( TEXT(Call_Status__c) ))), &quot;DCW#&quot;, 
&quot;&quot;)</formula>
    <label>DCW#</label>
    <type>Text</type>
</CustomField>