force-app/main/default/objects/Opportunity/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <defaultValue>199</defaultValue>
    <description>Used to populate a default value so formula fields are correct when calculating amount due and monthly payments. This field can be used to change the deposit value in the future. It can also be used to remove the deposit, if an exception is made for a client with no deposit.</description>
    <label>Deposit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>