force-app/main/default/objects/Opportunity/fields/Deposit_with_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Deposit_with_Shipping__c</fullName>
    <description>Calculates the total to be charged for Deposit &amp; Shipping and any Genomics Upfront Fees.  Uses the Deposit__c field, Genomics_Upfront_Fee__c and Shipping_Type__c to determine final amount.</description>
    <formula>IF(Tissue_Donation__c,Genomics_Upfront_Fee__c,Deposit__c+ Shipping_Cost__c+Genomics_Upfront_Fee__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the total to be charged for Deposit, Genomics Upfront Fees &amp; Shipping.</inlineHelpText>
    <label>Deposit with Shipping &amp; Upfront Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>