force-app/main/default/objects/Opportunity/fields/Dialpad__TotalNumberOfTimesDialed__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__TotalNumberOfTimesDialed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Number Of Times Dialed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>