force-app/main/default/objects/Opportunity/fields/Discount_percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_percent__c</fullName>
    <description>Used primarily when providing companies with discounts when their employees enroll.</description>
    <label>Discount %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>