force-app/main/default/objects/Opportunity/fields/Doctor_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Doctor_s_Name__c</fullName>
    <description>Used as a merge field for email templates in Marketo, for Local Sales Rep.</description>
    <label>Doctor&apos;s Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>