force-app/main/default/objects/Opportunity/fields/Donation_reconsider__c.field-meta.xml
<CustomField>
    <fullName>Donation_reconsider__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for WTE Survey</description>
    <label>Donation reconsider</label>
    <type>Checkbox</type>
</CustomField>