force-app/main/default/objects/Opportunity/fields/due_date_problem__c.field-meta.xml
<CustomField>
    <fullName>due_date_problem__c</fullName>
    <formula>if  (

Datevalue(CreatedDate) &gt;  Baby_s_Due_Date__c, &quot;date to early&quot;,

if (

Baby_s_Due_Date__c &gt; Datevalue(CreatedDate) + 270, &quot;date to late&quot;,   &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>due date problem</label>
    <type>Text</type>
</CustomField>