force-app/main/default/objects/Opportunity/fields/Dup_Email2__c.field-meta.xml
<CustomField>
    <fullName>Dup_Email2__c</fullName>
    <description>Used to help identify Alternative Email during duplicate merge process.</description>
    <label>Dup Email2</label>
    <type>Email</type>
</CustomField>