force-app/main/default/objects/Opportunity/fields/Ecomm_Status__c.field-meta.xml
<CustomField>
    <fullName>Ecomm_Status__c</fullName>
    <label>Ecomm Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>