force-app/main/default/objects/Opportunity/fields/Egg_Donor_Status__c.field-meta.xml
<CustomField>
    <fullName>Egg_Donor_Status__c</fullName>
    <label>Egg Donor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Known to family</fullName>
            </value>
            <value>
                <fullName>Unknown to family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>