force-app/main/default/objects/Opportunity/fields/Email_Invalid_2__c.field-meta.xml
<CustomField>
    <fullName>Email_Invalid_2__c</fullName>
    <formula>Contact2__r.Email_Invalid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Invalid 2</label>
    <type>Checkbox</type>
</CustomField>