force-app/main/default/objects/Opportunity/fields/Email_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Email_Invalid__c</fullName>
    <formula>Contact__r.Email_Invalid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Invalid</label>
    <type>Checkbox</type>
</CustomField>