force-app/main/default/objects/Opportunity/fields/Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out__c</fullName>
    <formula>Contact__r.HasOptedOutOfEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>