force-app/main/default/objects/Opportunity/fields/Enrolled_in_Ambassador_Program__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_in_Ambassador_Program__c</fullName>
    <label>Enrolled in Ambassador Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Enrolled_in_Ambassador_Program</valueSetName>
    </valueSet>
</CustomField>