force-app/main/default/objects/Opportunity/fields/Enrollment_Flow_Complete__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Flow_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the Enrollment Screenflow has been completed.  This will ensure that required fields are entered and the values needed for enrollment are present. Automatically checked by the Enrollment Flow and unchecked if the Stage is changed from Enrolled.</description>
    <label>Enrollment Flow Complete</label>
    <type>Checkbox</type>
</CustomField>