force-app/main/default/objects/Opportunity/fields/Est_Total_Monthly_Fees__c.field-meta.xml
<CustomField>
    <fullName>Est_Total_Monthly_Fees__c</fullName>
    <formula>IF(CONTAINS(TEXT(Payment_Plans__c),&quot;Hybrid&quot;),Monthly_Fee__c*ROUND(No_of_Pymts__c*0.8,0),Monthly_Fee__c*No_of_Pymts__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly Fees OLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>