force-app/main/default/objects/Opportunity/fields/Exosomes__c.field-meta.xml
<CustomField>
    <fullName>Exosomes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ZDeprecate Exosomes</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>