force-app/main/default/objects/Opportunity/fields/Filter_Number__c.field-meta.xml
<CustomField>
    <fullName>Filter_Number__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Filter Number</label>
    <type>AutoNumber</type>
</CustomField>