force-app/main/default/objects/Opportunity/fields/First_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Date__c</fullName>
    <description>Fastcall First Call Date</description>
    <label>First Call Date</label>
    <type>DateTime</type>
</CustomField>