force-app/main/default/objects/Opportunity/fields/Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Date__c</fullName>
    <label>Follow-up Date</label>
    <type>Date</type>
</CustomField>