force-app/main/default/objects/Opportunity/fields/fw11__Revenue_Recognition_Rule__c.field-meta.xml
<CustomField>
    <fullName>fw11__Revenue_Recognition_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Recognition Rule</label>
    <referenceTo>fw11__Revenue_Recognition_Rule__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>