force-app/main/default/objects/Opportunity/fields/fw2__IsClone__c.field-meta.xml
<CustomField>
    <fullName>fw2__IsClone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opportunity is a clone</description>
    <label>IsClone</label>
    <type>Checkbox</type>
</CustomField>