force-app/main/default/objects/Opportunity/fields/fw2__Product_Count__c.field-meta.xml
<CustomField>
    <fullName>fw2__Product_Count__c</fullName>
    <label>Product Count</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>