force-app/main/default/objects/Opportunity/fields/Genomics_Upfront_Fee__c.field-meta.xml
<CustomField>
    <fullName>Genomics_Upfront_Fee__c</fullName>
    <description>The amount to be charged up front for Genomics products in this order.  Populated via Apex Automation.</description>
    <label>Genomics Upfront Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>