force-app/main/default/objects/Opportunity/fields/Has_Been_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Has_Been_Distributed__c</fullName>
    <description>This field will be used by the distribution engine to determine if it needs to be distributed.</description>
    <label>Has Been Distributed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>