force-app/main/default/objects/Opportunity/fields/Hold_Shipment_Until__c.field-meta.xml
<CustomField>
    <fullName>Hold_Shipment_Until__c</fullName>
    <description>Used to allow Sales Reps to control when Collection Kit is sent.</description>
    <label>Hold Shipment Until</label>
    <type>Date</type>
</CustomField>