force-app/main/default/objects/Opportunity/fields/Hybrid_First_Payment__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_First_Payment__c</fullName>
    <formula>X24M_with_20YPP__c/2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>After $199 deposit and sales discount.</inlineHelpText>
    <label>Hybrid First Payment OLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>