force-app/main/default/objects/Opportunity/fields/Hybrid_First_Payment_Lifetime__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_First_Payment_Lifetime__c</fullName>
    <formula>(( Number_of_Products__c * 4250) + Sum_of_Product_Price_wo_Storage__c + Est_Total_Monthly_Fees__c - Sales_Discount__c - 199)/2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hybrid First Payment - Lifetime OLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>