force-app/main/default/objects/Opportunity/fields/Hybrid_First_Payment_new__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_First_Payment_new__c</fullName>
    <label>Hybrid First Payment</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>