force-app/main/default/objects/Opportunity/fields/Impact_Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Impact_Partner_Id__c</fullName>
    <description>This ID represents if a given lead was obtained via a partner. This value is also referred to as the media ID and represents a partner.</description>
    <inlineHelpText>This ID represents if a given lead was obtained via a partner. This value is also referred to as the media ID and represents a partner.</inlineHelpText>
    <label>Impact Partner Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>