force-app/main/default/objects/Opportunity/fields/Include_in_lead_reassignment__c.field-meta.xml
<CustomField>
    <fullName>Include_in_lead_reassignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in lead reassignment</label>
    <type>Checkbox</type>
</CustomField>