force-app/main/default/objects/Opportunity/fields/Inferred_City__c.field-meta.xml
<CustomField>
    <fullName>Inferred_City__c</fullName>
    <formula>Contact__r.mkto71_Inferred_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inferred City</label>
    <type>Text</type>
</CustomField>