force-app/main/default/objects/Opportunity/fields/Inferred_State__c.field-meta.xml
<CustomField>
    <fullName>Inferred_State__c</fullName>
    <description>From Marketo, used for dialer</description>
    <formula>Contact__r.mkto71_Inferred_State_Region__c</formula>
    <label>Inferred State</label>
    <type>Text</type>
</CustomField>