force-app/main/default/objects/Opportunity/fields/Inferred_Zip_Code_from_Contact__c.field-meta.xml
<CustomField>
    <fullName>Inferred_Zip_Code_from_Contact__c</fullName>
    <description>Used to prove reports for Melissa on potential clients.</description>
    <formula>Contact__r.mkto71_Inferred_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inferred Zip Code (from Contact)</label>
    <type>Text</type>
</CustomField>