force-app/main/default/objects/Opportunity/fields/Interested_in_Storage_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Storage_Upgrade__c</fullName>
    <label>Interested in Storage Upgrade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Interested_in_Storage_Upgrade</valueSetName>
    </valueSet>
</CustomField>