force-app/main/default/objects/Opportunity/fields/knowledgeaboutcordbloodbanking__c.field-meta.xml
<CustomField>
    <fullName>knowledgeaboutcordbloodbanking__c</fullName>
    <description>Used for WTE survey. Data comes from Marketo, syncs to Lead and maps to Account and Opportunity.</description>
    <label>Knowledge about cord blood banking</label>
    <length>40</length>
    <type>Text</type>
</CustomField>