force-app/main/default/objects/Opportunity/fields/Last_Call_Results__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Results__c</fullName>
    <description>Populated with a flow from Xant&apos;s Playbooks tasks.</description>
    <label>Last Call Results</label>
    <length>100</length>
    <type>Text</type>
</CustomField>