force-app/main/default/objects/Opportunity/fields/Lead_Create_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Create_Date_Time__c</fullName>
    <label>Lead Create Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>