force-app/main/default/objects/Opportunity/fields/Lead_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Lead_Qualification__c</fullName>
    <label>Lead Qualification</label>
    <length>20</length>
    <type>Text</type>
</CustomField>