force-app/main/default/objects/Opportunity/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <description>Populated on the lead with a formula and sent to Opportunity via mapping; used for Distribution Engine</description>
    <label>Lead Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>