force-app/main/default/objects/Opportunity/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <description>The total of all the list prices of bundles and products in this Opportunity.  Represents the price before any Sales or Marketing discounts are applied.</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>