force-app/main/default/objects/Opportunity/fields/List_Price_Total__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Total__c</fullName>
    <description>This is the total for the list price of the Opportunity LIne Items.</description>
    <inlineHelpText>This is the total for the list price of the Opportunity LIne Items.</inlineHelpText>
    <label>List Price Total</label>
    <summarizedField>OpportunityLineItem.Sub_Total__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>