force-app/main/default/objects/Opportunity/fields/Local_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Local_Sales_Rep__c</fullName>
    <description>Not used, can be deleted</description>
    <label>Local Sales Rep (old)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Melissa Keil</fullName>
            </value>
            <value>
                <fullName>Kimberly Schienberg</fullName>
            </value>
            <value>
                <fullName>Brian Packard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>