force-app/main/default/objects/Opportunity/fields/Manual_Override_Quantities__c.field-meta.xml
<CustomField>
    <fullName>Manual_Override_Quantities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Override Quantities</label>
    <type>Checkbox</type>
</CustomField>