force-app/main/default/objects/Opportunity/fields/Marketing_Discount__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Discount__c</fullName>
    <description>A discount that was added via a promotional code or similar.</description>
    <label>Marketing Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>