force-app/main/default/objects/Opportunity/fields/Marketing_Discount_Total__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Discount_Total__c</fullName>
    <description>This field will aggregate the total marketing discount value for the opportunity line items.</description>
    <inlineHelpText>This field will contain the rollup from the Opportunity Line Item Sales Discounts.</inlineHelpText>
    <label>Marketing Discount Total</label>
    <summarizedField>OpportunityLineItem.Marketing_Discount__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>