force-app/main/default/objects/Opportunity/fields/Marketing_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Opt_Out__c</fullName>
    <description>This field will be used by marketing to filter out leads when sending marketing emails/sms.</description>
    <inlineHelpText>This field will be used by marketing to filter out leads when sending marketing emails/sms.</inlineHelpText>
    <label>Marketing Opt-Out</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Placenta Tissue Donation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>