force-app/main/default/objects/Opportunity/fields/Marketo_Lead_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Lead_Scoring__c</fullName>
    <formula>Contact__r.mkto71_Lead_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketo Lead Scoring</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>