force-app/main/default/objects/Opportunity/fields/Maternal_Exosomes__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Exosomes__c</fullName>
    <description>Number indicating the order for maternal exosomes.</description>
    <label>Maternal Exosomes</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>